Fixes return type for data.

--- a/config/index.html
+++ b/config/index.html
@@ -59,8 +59,8 @@
     var timeTime = document.getElementById('time-time');
  
     var options = {
-      'reminder_enabled': enabledToggle.value,
-      'reminder_time': timeTime.checked
+      'reminder_enabled': enabledToggle.checked,
+      'reminder_time': timeTime.value
     };
 
     // Save for next launch
