--- a/config/index.html
+++ b/config/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Slate Example Configuration</title>
+  <title>7-Min+ Configuration Page</title>
   <link rel='stylesheet' type='text/css' href='css/slate.min.css'>
   <script src='js/slate.min.js'></script>
   <style>
@@ -54,6 +54,7 @@
     </div>
   </body>
   <script>
+
   function getConfigData() {
     var enabledToggle = document.getElementById('toggle-enabled');
     var timeTime = document.getElementById('time-time');
