--- a/config/index.html
+++ b/config/index.html
@@ -59,7 +59,7 @@
     var enabledToggle = document.getElementById('toggle-enabled');
     var timeTime = document.getElementById('time-time');
  
-    var options = {ß
+    var options = {
       'reminder_enabled': enabledToggle.checked,
       'reminder_time': timeTime.value
     };
