Fixes quote mark inconsistencies.

--- a/config/index.html
+++ b/config/index.html
@@ -35,11 +35,11 @@
       <div class='item-container-content'>
         <label class="item">
           Enabled
-          <input type="checkbox" id="toggle-enabled" checked>
+          <input type='checkbox' class='item-toggle' id='toggle-enabled' checked>
         </label>
         <label class='item'>
           When
-          <input type="time" id="time-time" value="8:00" step="900">
+          <input type='time' class='item-time' id='time-time' value='8:00' step='900'>
         </label>
       </div>
       <div class='item-container-footer'>
