Commented out return code.

--- a/config/index.html
+++ b/config/index.html
@@ -90,7 +90,7 @@
 
     // Set the return URL depending on the runtime environment
     var return_to = getQueryParam('return_to', 'pebblejs://close#');
-    document.location = return_to + encodeURIComponent(JSON.stringify(getConfigData()));
+    //document.location = return_to + encodeURIComponent(JSON.stringify(getConfigData()));
   });
 
   (function() {
