Rewords a few things...

--- a/config/index.html
+++ b/config/index.html
@@ -17,20 +17,19 @@
   </head>
 
   <body>
-    <h1 class='title'>7 Min+</h1>
+    <h1 class='title'>7-Minute+</h1>
 
     <div class='item-container'>
       <div class='item-container-content'>
         <div class='item'>
-          7 Min+ is a simple Pebble application to walk you though the 7 minute workout.
-          It also pushes a pin to your timeline when you finish your workout, and has an
-          option to remind you to workout every day at a certain time.
+          Work out with this simple application! It can remind you with your timeline,
+          and will send you a pin when you are finished.
         </div>
       </div>
     </div>
 
     <div class='item-container'>
-      <div class='item-container-header'>Timeline Reminder</div>
+      <div class='item-container-header'>Daily Timeline Reminder</div>
       <div class='item-container-content'>
         <label class="item">
           Enabled
