Rewords a few things...

--- a/config/index.html
+++ b/config/index.html
@@ -23,7 +23,7 @@
       <div class='item-container-content'>
         <div class='item'>
           Work out with this simple application! It can remind you with your timeline,
-          and will send you a pin when you are finished.
+          and will send you a pin when you are finished exercising.
         </div>
       </div>
     </div>
