--- a/config/index.html
+++ b/config/index.html
@@ -22,8 +22,8 @@
     <div class='item-container'>
       <div class='item-container-content'>
         <div class='item'>
-          Work out with this simple application! It can remind you with your timeline,
-          and will send you a pin when you are finished exercising.
+          Get in shape with this simple 7-Minute Workout app! Never forget to exercise with a daily
+          timeline reminder, and receive a pin when you complete it.
         </div>
       </div>
     </div>
